# amadeus

./: .gitignore  INSTALL.md  NOTES.md  README.md  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
amadeus/: action_factory.py  broker.py  client.py  conductor.py  config.py  constants.py  exceptions.py  extract.py  logger.py  player.py  runnable.py  utils.py  yaml_loader.py  yaml_object.py
amadeus/actions/: basic_extract.py
amadeus/actions/basic/: base_action.py  basics.py
amadeus/compositions/: base.py  factory.py  loader.py  parser.py
amadeus/compositions/statements/: base.py  factory.py  loop.py
amadeus/connections/: manager.py  sqlconnection.py
amadeus/datasources/: base.py  cache.py  factory.py  loader.py  sql_datasource.py
amadeus/entries/: client.py  conductor.py  extract.py  player.py  runnable.py
amadeus/playbooks/: base.py  factory.py  loader.py
amadeus/statements/: basic_extract.py
amadeus/statements/basic/: base_action.py  basics.py
amadeus/tests/: base_test.py  parser_test.py
resources/compositions/: test1.yaml
resources/datasources/: poop.yaml
resources/playbooks/: test1.yaml
