[metadata]
name = amadeus
version = 0.1.0
author = Justin L. Hammond
author-email = justin.hammond@rackspace.com
summary = A pipelined report runner for BI
description-file = README.md
license = Apache-2
home-page = https://github.com/roaet/amadeus
classifier =
    Development Status :: 4 - Beta
        Environment : Console
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python

[entry_points]
console_scripts =
    ama_extract = amadeus.entries.extract:extract
    ama_conductor = amadeus.entries.conductor:run
    ama_player = amadeus.entries.player:run
    ama_client = amadeus.entries.client:run
    ama_simfsm = amadeus.entries.conductor:simfsm
